feat(be): add account login and api prefix
